Update Zubari AI Study Buddy to meet requirements

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zubari AI Study Buddy</title>
+    <title>Zubari AI Studdy Buddy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +13,11 @@
                 <h2>Zubari AI Studdy Buddy</h2>
             </div>
             <div class="nav-auth">
-                <button id="loginBtn" class="auth-btn">Log In</button>
-                <button id="signupBtn" class="auth-btn primary">Sign Up</button>
+                <button id="loginBtn" class="auth-btn">Sign in</button>
+                <button id="signupBtn" class="auth-btn primary">Sign up</button>
                 <div id="userMenu" class="user-menu hidden">
                     <span id="userEmail"></span>
-                    <button id="logoutBtn" class="auth-btn">Logout</button>
+                    <button id="logoutBtn" class="auth-btn">Sign out</button>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
 
     <div class="container">
         <div class="hero-section">
-            <h1>Welcome to Zubari AI Studdy Buddy</h1>
+            <h1>Zubari AI Studdy Buddy</h1>
             <p class="hero-subtitle">Your intelligent companion for effective learning</p>
         </div>
 
@@ -60,7 +60,7 @@
         </div>
 
         <div class="premium-banner">
-            <h3>🌟 Upgrade to Premium</h3>
+            <h3>Upgrade to Premium</h3>
             <p>Get unlimited AI responses and advanced features</p>
             <button id="premiumBtn" class="premium-btn">View Plans</button>
         </div>
