--- a/public/premium.html
+++ b/public/premium.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Plans - Zubari AI Study Buddy</title>
     <title>Premium Plans - Zubari AI Studdy Buddy</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://js.paystack.co/v1/inline.js"></script>
@@ -15,11 +14,11 @@
                 <h2>Zubari AI Studdy Buddy</h2>
             </div>
             <div class="nav-auth">
-                <button id="loginBtn" class="auth-btn">Log In</button>
-                <button id="signupBtn" class="auth-btn primary">Sign Up</button>
+                <button id="loginBtn" class="auth-btn">Sign in</button>
+                <button id="signupBtn" class="auth-btn primary">Sign up</button>
                 <div id="userMenu" class="user-menu hidden">
                     <span id="userEmail"></span>
-                    <button id="logoutBtn" class="auth-btn">Logout</button>
+                    <button id="logoutBtn" class="auth-btn">Sign out</button>
                 </div>
             </div>
         </div>
@@ -27,7 +26,7 @@
 
     <div class="container">
         <div class="premium-header">
-            <h1>Choose Your Plan</h1>
+            <h1>Choose your plan</h1>
             <p>Unlock unlimited AI responses and advanced features</p>
         </div>
 
@@ -38,13 +37,13 @@
                     <div class="price">KES 0<span>/month</span></div>
                 </div>
                 <ul class="features-list">
-                    <li>✅ 5 AI requests per month</li>
-                    <li>✅ Basic question generation</li>
-                    <li>✅ Text summarization</li>
-                    <li>❌ Unlimited AI responses</li>
-                    <li>❌ Priority support</li>
+                    <li>5 AI requests per month</li>
+                    <li>Basic question generation</li>
+                    <li>Text summarization</li>
+                    <li class="disabled">Unlimited AI responses</li>
+                    <li class="disabled">Priority support</li>
                 </ul>
-                <button class="plan-btn disabled">Current Plan</button>
+                <button class="plan-btn disabled">Current plan</button>
             </div>
 
             <div class="pricing-card featured">
@@ -54,11 +53,11 @@
                     <div class="price">KES 1,000<span>/month</span></div>
                 </div>
                 <ul class="features-list">
-                    <li>✅ Unlimited AI requests</li>
-                    <li>✅ All AI tools included</li>
-                    <li>✅ Advanced study plans</li>
-                    <li>✅ Priority support</li>
-                    <li>✅ Export capabilities</li>
+                    <li>Unlimited AI requests</li>
+                    <li>All AI tools included</li>
+                    <li>Advanced study plans</li>
+                    <li>Priority support</li>
+                    <li>Export capabilities</li>
                 </ul>
                 <button class="plan-btn" data-plan="monthly">Choose Monthly</button>
             </div>
@@ -70,11 +69,11 @@
                     <div class="savings">Save KES 2,000!</div>
                 </div>
                 <ul class="features-list">
-                    <li>✅ Unlimited AI requests</li>
-                    <li>✅ All AI tools included</li>
-                    <li>✅ Advanced study plans</li>
-                    <li>✅ Priority support</li>
-                    <li>✅ Export capabilities</li>
+                    <li>Unlimited AI requests</li>
+                    <li>All AI tools included</li>
+                    <li>Advanced study plans</li>
+                    <li>Priority support</li>
+                    <li>Export capabilities</li>
                 </ul>
                 <button class="plan-btn" data-plan="yearly">Choose Yearly</button>
             </div>
