--- a/public/signup.html
+++ b/public/signup.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Zubari AI Study Buddy</title>
-    <title>Sign Up - Zubari AI Studdy Buddy</title>
+    <title>Sign up - Zubari AI Studdy Buddy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +13,7 @@
                 <h2>Zubari AI Studdy Buddy</h2>
             </div>
             <div class="nav-auth">
-                <button onclick="window.location.href='/login.html'" class="auth-btn">Log In</button>
+                <button onclick="window.location.href='/login.html'" class="auth-btn">Sign in</button>
             </div>
         </div>
     </nav>
@@ -34,14 +33,14 @@
                 <div class="form-group">
                     <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm password" required>
                 </div>
-                <button type="submit" class="auth-submit-btn">Create Account</button>
+                <button type="submit" class="auth-submit-btn">Create account</button>
             </form>
             
             <div id="errorMessage" class="error-message hidden"></div>
             
             <p class="auth-switch">
                 Already have an account? 
-                <a href="/login.html">Sign in here</a>
+                <a href="/login.html">Sign in</a>
             </p>
         </div>
     </div>
